--- a/draft.html
+++ b/draft.html
@@ -1,30 +1,32 @@
-<a href="https://www.amazon.com" style="color: rgb(0, 113, 133)"
-  >Back to Amazon</a
->
-<p style="color: black; font-size: x-large; font-weight: bold">
-  Nike Black running shoes
-</p>
-<p style="color: rgb(0, 118, 0)">$39-in stock</p>
-<p>Free delivery tomorrow</p>
-<style>
-  .Addtocart-button {
-    background-color: rgb(215, 216, 20);
-    color: black;
-    height: 36px;
-    width: 150px;
-    border-radius: 18px;
-    border: none;
-    cursor: pointer;
-  }
-  .BuyNow-button {
-    background-color: rgb(255, 164, 20);
-    color: black;
-    border: none;
-    height: 36px;
-    width: 150px;
-    border-radius: 18px;
-    cursor: pointer;
-  }
-</style>
-<button class="Addtocart-button">Add to Cart</button>
-<button class="BuyNow-button">Buy Now</button>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <div class="contain">
+        <nav><h3></h3>
+    </div>
+    <ul>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+    </ul>
+    <ul>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+    </ul>
+</nav>
+<div>
+    <h1></h1>
+    <p></p>
+    <button></button>
+</div>
+    
+</body>
+</html>
